# cli-board-manager

./: README.md  pyproject.toml
src/cli_board_manager/: app.py  app.tcss
