[tool.poetry]
name = "cli-board-manager"
version = "0.1.0"
description = ""
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.md"
packages = [{ include = "cli_board_manager", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.66.0"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[tool.poetry.scripts]
cbm = "cli_board_manager.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
